# FloorFieldModel

./: CreateMap_from_OSM.py  FloorFieldModel.py  LICENSE  Map.json  README.md  Takatsuki_.xlsx  create_wall.py  memo.txt  pyproject.toml  run_FFM.py  setup.cfg  setup.py
FloorFieldModel/: FFM.py  __init__.py
FloorFieldModel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
FloorFieldModel/cp/: calc_probability.py
FloorFieldModel/dcm/: __init__.py  distance_calc_method.py
FloorFieldModel/examples/: test.py
FloorFieldModel/examples/data/ks3_kd1/: corner_0.db
FloorFieldModel/examples/map/: corner.npy
FloorFieldModel/hc/: __init__.py  handle_collisions.py
FloorFieldModel/sql/: create_and_save_sqlite.py
SFF/: Takatsuki.npy  Takatsuki_L1.npy  Takatsuki_Linf.npy
data/: Takatsuki_2.db  Takatsuki_4.db
data/ks3_kd1/: Takatsuki_1.db  Takatsuki_2.db  Takatsuki_4.db  Takatsuki_5.db  Takatsuki_6.db
examples/SFF/: corner_Linf.npy  room_Linf.npy
examples/data/ks3_kd1/: room_0.db
examples/map/: room.npy
map/: Takatsuki.npy  Takatsuki.xlsx  Takatsuki_.xlsx  Takatsuki_SimpleWall.npy
src/: CreateMap_from_OSM.py  FloorFieldModel.py  OSM.py
src/cp/: calc_probability.py
src/dcm/: distance_calc_method.py
src/hc/: handle_collisions.py
src/sql/: create_and_save_sqlite.py
tests/: osmtest  plot.py  test.py
