[metadata]
name = FloorFieldModel
version = 0.1.1
author = Sora Kurihara
author_email = sorasorasora.918@gmail.com
description = A simulation package for Floor Field Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SoraKurihara/FloorFieldModel
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.11
install_requires =
    tqdm==4.65.0
    numpy==1.26.1
    scikit-fmm==2023.4.2
